--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ rsconnect/
 # large data
 data/gsi_living_lab_data.csv
 app/data/gsi_living_lab_data.csv
+data/gsi_living_lab_ETo.csv
+app/data/gsi_living_lab_ETo.csv
 
 ~/.boxr-oauth
 
