--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ rsconnect/
 # large data
 data/gsi_living_lab_data.csv
 app/data/gsi_living_lab_data.csv
-
+app/data/gsi_living_lab_ETo.csv
 ~/.boxr-oauth
 
 
