--- a/.github/workflows/deploy-connect.yaml
+++ b/.github/workflows/deploy-connect.yaml
@@ -24,6 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: 'renv'
       - uses: r-lib/actions/setup-renv@v2
       
       - name: Install packages required for rsconnect
